SERVER-91254 Convert to decimal before comparison in window (#23185)

GitOrigin-RevId: 3ffde5ef573fe4a21ffd3f69807a18cfdeef5406